--- a/connexions.html
+++ b/connexions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>5.2 Avaliação dentro de Repositórios</title>
+  <title>Objetos de Aprendizado</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -69,34 +69,80 @@
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
       <h1 class="mb-4">Connexions</h1>
-      <p class="texto-slide">Connexions é um repositório que permite que usuários criem e compartilhem
-        colaborativamente materiais de aprendizagem e que tem apresentado um crescimento exponencial de contribuidores
-        nos últimos anos.</p>
+      <img src="images/Lenses.png" class="rounded float-right img-slides" alt="...">
 
-      <p class="texto-slide">
-        No Connexions todos os materiais são criados por sua própria
-        comunidade onde desenvolve materiais em dois formatos: <b>módulos (pequenas peças de
-          conhecimento) e coleções (grupos de módulos estruturados em notas de cursos).</b>
-        No Connexions cada material é disponível de forma livre para uso, reúso e
-        compartilhamento.
-      </p>
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">O que é o Connexion?</h2>
+              </button>
+            </h5>
+          </div>
 
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">Connexions é um repositório que permite que usuários criem e compartilhem
+                colaborativamente materiais de aprendizagem e que tem apresentado um crescimento exponencial de contribuidores
+                nos últimos anos.</p>
 
-      <p class="texto-slide">A qualidade no Connexions é controlada a partir de um sistema denominado de <b>(lenses)</b>
-        que organiza os recursos de acordo com as avaliações fornecidas por indivíduos e organizações.
-        Nesse contexto, recursos são explicitamente endossados por terceiros, e ganham maior garantia de qualidade à
-        medida que começam a acumular mais endossos (lentes) de outros. Ainda, o Connexions também fornece mecanismos
-        para ordenar os materiais considerando os números de acesso aolongo do tempo (medida de popularidade)
-        e as pontuações dadas pelos usuários.
-      </p>
+            </div>
+          </div>
+        </div>
+      
 
-      <p class="texto-slide">Recentemente também integrou plugins do (Facebook e Twitter), permitindo que a comunidade
-        de usuários possa
-        recomendar e disseminar materiais através dessas plataformas. </p>
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+              aria-expanded="false" aria-controls="collapseThree">
+              <h2 class="mb-1 titulo-slide">Características</h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">
+              No Connexions todos os materiais são criados por sua própria
+              comunidade onde desenvolve materiais em dois formatos: <b>módulos (pequenas peças de
+                conhecimento) e coleções (grupos de módulos estruturados em notas de cursos).</b>
+              No Connexions cada material é disponível de forma livre para uso, reúso e
+              compartilhamento.
+            </p>
+          </div>
+        </div>
+      </div>
 
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+              aria-expanded="false" aria-controls="collapseTwo">
+              <h2 class="mb-1 titulo-slide">Como é feita a avaliação de qualidade no Connexions? </h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">A qualidade no Connexions é controlada a partir de um sistema denominado de <b>(lenses)</b>
+              que organiza os recursos de acordo com as avaliações fornecidas por indivíduos e organizações.
+              Nesse contexto, recursos são explicitamente endossados por terceiros, e ganham maior garantia de qualidade à
+              medida que começam a acumular mais endossos (lentes) de outros. Ainda, o Connexions também fornece mecanismos
+              para ordenar os materiais considerando os números de acesso ao longo do tempo (medida de popularidade)
+              e as pontuações dadas pelos usuários.
+            </p>
+          </div>
+        </div>
+      </div>
       <img src="images/Lenses.png" class="img-fluid" alt="Imagem responsiva">
     </div>
+
   </div>
+  </div>
+
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
