--- a/consideracoes.html
+++ b/consideracoes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Obkjetos de Aprendizagem - Avaliação dentro de Repositórios</title>
+  <title>Objetos de Aprendizado</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -69,19 +69,38 @@
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
       <h1 class="mb-4">Considerações</h1>
-      <p class="texto-slide">
-        A avaliação da qualidade dos objetos de aprendizagem é uma tarefa
-        difícil que normalmente envolve diversos aspectos e diferentes atores
-        interessados, e os métodos de avaliação atualmente existentes não estão
-        livres de ambiguidades. </p>
-        <p class="texto-slide">
-        Diferentes repositórios de objetos de aprendizagem estão frequentemente adotando
-        estratégias que confiam na comunidade de usuários e especialistas que avaliam a qualidade dos recursos
-        a partir de pontos e comentários. Tais avaliações podem ser realizadas
-        a partir de critérios de avaliação formais e pré-definidos, ou de maneira mais informal e sem especificações pré-estabelecidas.
-      </p>
+      <img src="images/logo-qualidade.jpg" class="rounded float-right img-slides" alt="...">
+
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">Acerca da avaliação de qualidade </h2>
+              </button>
+            </h5>
+          </div>
+
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">           
+                <p class="texto-slide">
+                Diferentes repositórios de objetos de aprendizagem estão frequentemente adotando
+                estratégias que confiam na comunidade de usuários e especialistas que avaliam a qualidade dos recursos
+                a partir de pontos e comentários. Tais avaliações podem ser realizadas
+                a partir de critérios de avaliação formais e pré-definidos, ou de maneira mais informal e sem especificações pré-estabelecidas.
+              </p>
+
+            </div>
+          </div>
+        </div>
+
     </div>
+
   </div>
+  </div>
+
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
