--- a/elera.html
+++ b/elera.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>5.2 Avaliação dentro de Repositórios</title>
+  <title>Objetos de Aprendizado</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -65,26 +65,84 @@
       </ul>
 
     </nav>
+
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
-      <h1 class="mb-4">eLera</h1>
-      <p class="texto-slide">eLERA – Significa Rede de Pesquisa e Avaliação de Ensino Eletrônico (E-Learning Research
-        and Assessment Network). Foi um pequeno referatório (com aproximadamente trezentos recursos) criado com
-        propósito de pesquisa. O foco principal desse repositório era de fornecer mecanismos e ferramentas para a
-        avaliação colaborativa e participativa de objetos de aprendizagem a partir do uso do LORI.
-      </p>
 
-      <p class="texto-slide">
-        No eLera, os membros podiam criar revisões dos OAs a partir do uso do LORI, e membros especialistas podiam
+      <h1 class="mb-4">eLera</h1>
+
+      <img src="images/elera.png" class="rounded float-right img-slides" alt="...">
+
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">O que siginifica eLera?</h2>
+              </button>
+            </h5>
+          </div>
+
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">eLERA – Significa Rede de Pesquisa e Avaliação de Ensino Eletrônico (E-Learning Research
+                and Assessment Network). 
+              </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+              aria-expanded="false" aria-controls="collapseThree">
+              <h2 class="mb-1 titulo-slide">O que foi o eLera?</h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide"> Foi um pequeno referatório (com aproximadamente trezentos recursos) criado com
+              propósito de pesquisa. O foco principal desse repositório era de fornecer mecanismos e ferramentas para a
+              avaliação colaborativa e participativa de objetos de aprendizagem a partir do uso do LORI.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+              aria-expanded="false" aria-controls="collapseTwo">
+              <h2 class="mb-1 titulo-slide">Como era feita a avaliações de qualidade no eLera? </h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">
+              No eLera, os membros podiam criar revisões dos OAs a partir do uso do LORI, e membros especialistas podiam
         moderar
         times de membros em um processo de revisão colaborativo Além disso, membros também podiam adicionar recursos
         como
         seus favoritos (bookmarks), permitindo ao eLera recomendar materiais não apenas pelas pontuações associadas, mas
         também por sua popularidade.
-      </p>
+            </p>
+          </div>
+        </div>
+      </div>
       <img src="images/elera.png" class="img-fluid" alt="Imagem responsiva">
     </div>
+
   </div>
+  </div>
+
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
