--- a/merlot.html
+++ b/merlot.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>5.2 Avaliação dentro de Repositórios</title>
+  <title>Objetos de Aprendizado</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -65,52 +65,111 @@
       </ul>
 
     </nav>
+
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
       <h1 class="mb-4">Merlot</h1>
-      <p class="texto-slide">O <a href="https://merlot.org/merlot/">MERLOT</a> (The Multimedia Educational Resource for
-        Learning and Online Teaching) é uma iniciativa bem conhecida e internacionalmente
-        reconhecida que permite a usuários catalogar recursos educacionais com
-        o objetivo de facilitar o seu uso e compartilhamento.
-      </p>
-      <p class="texto-slide">Foi desenvolvido pelo Centro de Aprendizagem Distribuída da Universidade do Estado da
-        California e armazena metadados de mais de 45.000
-        materiais distribuídos em diversas áreas (Artes, Negócios, Humanidades, entre outras). Sua comunidade de
-        usuários é formada por mais de
-        100.000 membros. Como o MERLOT não armazena os OAs localmente,
-        ele pode ser classificado como um referatório.</p>
-      </p>
-      <p class="texto-slide">
-        AO repositório MERLOT apresenta um modelo de revisão por pares
-        de pós-publicação com o objetivo de assegurar a qualidade dos recursos
-        catalogados (CAFOLLA, 2006).
-      </p>
+      <img src="images/merlot-logo.png" class="rounded float-right img-slides" alt="...">
 
-      <p class="texto-slide">
-        Os materiais catalogados no MERLOT são
-        revisados por diferentes especialistas nas disciplinas em questão e de
-        acordo com critérios de avaliação formais e pré-definidos que contemplam três diferentes aspectos:
-      </p>
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">O que é o Merlot?</h2>
+              </button>
+            </h5>
+          </div>
 
-      <p class="texto-slide"><b>
-          1. Qualidade do Conteúdo;</br>
-          2. Efetivo Potencial como uma Ferramenta de Ensino;</br>
-          3. Facilidade de Uso. </br>
-        </b>
-      </p>
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">O <a href="https://merlot.org/merlot/">MERLOT</a> (The Multimedia Educational
+                Resource for
+                Learning and Online Teaching) é uma iniciativa bem conhecida e internacionalmente
+                reconhecida que permite a usuários catalogar recursos educacionais com
+                o objetivo de facilitar o seu uso e compartilhamento.
+              </p>
 
-      <p class="texto-slide">
-        Após os revisores especialistas relatarem suas avaliações, o editor chefe compõe um único relatório com nota
-        que é publicado no repositório com a autorização dos autores.
-        Além da revisão por especialistas no domínio. Os usuarios também deixam comentários e pontuações para os
-        materiais, complementando sua estratégia de avaliação com a alternativa de um mecanismo mais informal.
-        As avaliações de ambos os grupos (usuários e especialistas) variam de 1 a 5, sendo 5 a melhor nota.
-      </p>
+            </div>
+          </div>
+        </div>
 
 
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+                aria-expanded="false" aria-controls="collapseThree">
+                <h2 class="mb-1 titulo-slide">Características</h2>
+              </button>
+            </h5>
+          </div>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide"> Foi desenvolvido pelo Centro de Aprendizagem Distribuída da Universidade do Estado
+                da California e
+                armazena metadados de mais de 45.000 materiais distribuídos em diversas áreas (Artes, Negócios,
+                Humanidades, entre outras). Sua comunidade de usuários é formada por mais de 100.000 membros. Como o
+                MERLOT não armazena os OAs localmente, ele pode ser classificado como um referatório.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                aria-expanded="false" aria-controls="collapseTwo">
+                <h2 class="mb-1 titulo-slide">Como é feita a avaliações de qualidade no Merlot? </h2>
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">
+                Os materiais catalogados no MERLOT são
+                revisados por diferentes especialistas nas disciplinas em questão e de
+                acordo com critérios de avaliação formais e pré-definidos que contemplam três diferentes aspectos:
+                </br>
+                <b>1. </b>Qualidade do Conteúdo;</br>
+                <b>2. </b>Efetivo Potencial como uma Ferramenta de Ensino;</br>
+                <b>3. </b>Facilidade de Uso. </br>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour"
+                aria-expanded="false" aria-controls="collapseFour">
+                <h2 class="mb-1 titulo-slide">Pós analise</h2>
+              </button>
+            </h5>
+          </div>
+          <div id="collapseFour" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">
+                Após os revisores especialistas relatarem suas avaliações, o editor chefe compõe um único relatório com
+                nota
+                que é publicado no repositório com a autorização dos autores.
+                Além da revisão por especialistas no domínio. Os usuarios também deixam comentários e pontuações para os
+                materiais, complementando sua estratégia de avaliação com a alternativa de um mecanismo mais informal.
+                As avaliações de ambos os grupos (usuários e especialistas) variam de 1 a 5, sendo 5 a melhor nota.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
       <img src="images/Merlot.png" class="img-fluid" alt="Imagem responsiva">
     </div>
   </div>
+
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
