--- a/organic.html
+++ b/organic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>5.2 Avaliação dentro de Repositórios</title>
+  <title>Objetos de Aprendizado</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -69,25 +69,64 @@
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
       <h1 class="mb-4">Organic.Edunet</h1>
-      <p class="texto-slide">O Organic.Edunet <a href="http://www.eanetwork.eu/organicedunet">portal.organic-edunet.eu</a> é uma federação de
-        repositórios financiada pela União Europeia e focada exclusivamente em conteúdos relacionados a Agricultura e Agroecologia Orgânica. 
-        Apesar de ser um repositório relativamente novo (lançado em 2009), ele já possui aproximadamente 2.500 usuários e
-        11.000 recursos. 
-      </p>
-      <p class="texto-slide">No Organic.Edunet, a qualidade é garantida pela comunidade de 
-        usuários, que possui permissão para pontuar os recursos e melhorar as traduções dos metadados (o portal é multilíngue, 
-        a interface é disponbilizada em <b>nove idiomas</b>).</p>
-      </p>
-      <p class="texto-slide">
-        Ainda, qualquer 
-        usuário pode dar sua opinião direta sobre um dado recurso do portal, 
-        assim como relatar conteúdos inapropriados.
-      </p>
+      <img src="images/logo-organic.jpg" class="rounded float-right img-slides" alt="...">
 
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">O que é o Organic.Edunet </h2>
+              </button>
+            </h5>
+          </div>
 
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">O Organic.Edunet <a
+                  href="http://www.eanetwork.eu/organicedunet">portal.organic-edunet.eu</a> é uma federação de
+                repositórios financiada pela União Europeia e focada exclusivamente em conteúdos relacionados a
+                Agricultura e Agroecologia Orgânica.
+                Apesar de ser um repositório relativamente novo (lançado em 2009), ele já possui aproximadamente 2.500
+                usuários e
+                11.000 recursos.
+              </p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                aria-expanded="false" aria-controls="collapseTwo">
+                <h2 class="mb-1 titulo-slide">Como é feita a avaliação de qualidade do Organic.Edunet? </h2>
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">No Organic.Edunet, a qualidade é garantida pela comunidade de
+                usuários, que possui permissão para pontuar os recursos e melhorar as traduções dos metadados (o portal
+                é multilíngue,
+                a interface é disponbilizada em <b>nove idiomas</b>).
+                </br>
+                Ainda, qualquer
+                usuário pode dar sua opinião direta sobre um dado recurso do portal,
+                assim como relatar conteúdos inapropriados.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
       <img src="images/organic.png" class="img-fluid" alt="Imagem responsiva">
     </div>
   </div>
+
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
