--- a/repositorios.html
+++ b/repositorios.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>5.2 Avaliação dentro de Repositórios</title>
+  <title>Objetos de Aprendizado</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -68,20 +68,83 @@
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
-      <h1 class="mb-4">Avaliação dentro de Repositórios </h1>
-      <p class="texto-slide">Após a sua produção, os OAs precisam ser publicados em um lugar onde os usuários possam buscá-los e recuperá-los para uso futuro. Os repositórios de objetos de aprendizagem são os sistemas que fornecem as funcionalidades para isso. 
-        Um repositório pode ser simplesmente definido como uma coleção digital onde os recursos são armazenados para posterior recuperação. 
-        </p>
-        <p class="texto-slide"> As ROAs são potenciais agregadores de comunidades de prática e tendem a aproveitar as características desses ambientes sociais e adotam estratégias para o verificar qualidade a partir de impressões de uso e as avaliações dadas pelos usuários e especialistas membros da comunidade do repositório. 
-         </p>
-         <p class="texto-slide"> 
-          As ROAs armazenam memórias individuais, impressões ou informações sobre um assunto de maneira a formar um corpo de conhecimento coletivo e universal que pode servir como uma memória externa para ajudar outros indivíduos; </p>
-          <p class="texto-slide"> 
-        Dentro dos ROAs, as informações avaliativas são normalmente utilizadas como a base para assegurar a qualidade dos recursos, mas também para o ranqueamento e a recomendação dos mesmos para os usuários. 
-        </p>
+      <h1 class="mb-4">Repositórios</h1>
+      <img src="images/Repositórios.jpg" class="rounded float-right img-slides" alt="...">
+
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">Definição de repositorio </h2>
+              </button>
+            </h5>
+          </div>
+
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">Após a sua produção, os OAs precisam ser publicados em um lugar onde os usuários
+                possam buscá-los e recuperá-los para uso futuro. Os repositórios de objetos de aprendizagem são os
+                sistemas que fornecem as funcionalidades para isso.
+                Um repositório pode ser simplesmente definido como uma coleção digital onde os recursos são armazenados
+                para posterior recuperação.
+              </p>
+
+            </div>
+          </div>
+        </div>
+      
+
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+              aria-expanded="false" aria-controls="collapseThree">
+              <h2 class="mb-1 titulo-slide">Acerca dos Repositorios</h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide"> As ROAs são potenciais agregadores de comunidades de prática e tendem a aproveitar
+              as características desses ambientes sociais e adotam estratégias para o verificar qualidade a partir de
+              impressões de uso e as avaliações dadas pelos usuários e especialistas membros da comunidade do
+              repositório.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+              aria-expanded="false" aria-controls="collapseTwo">
+              <h2 class="mb-1 titulo-slide">Como são feitas as avaliações dos Repositorios? </h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">
+              As ROAs armazenam memórias individuais, impressões ou informações sobre um assunto de maneira a formar um
+              corpo de conhecimento coletivo e universal que pode servir como uma memória externa para ajudar outros
+              indivíduos; </p>
+            <p class="texto-slide">
+              Dentro dos ROAs, as informações avaliativas são normalmente utilizadas como a base para assegurar a
+              qualidade dos recursos, mas também para o ranqueamento e a recomendação dos mesmos para os usuários.
+            </p>
+          </div>
+        </div>
+      </div>
 
     </div>
+
   </div>
+  </div>
+
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
