--- a/revisaoespecialista.html
+++ b/revisaoespecialista.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>5.2 Avaliação dentro de Repositórios</title>
+  <title>Objetos de Aprendizado</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -69,27 +69,100 @@
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
       <h1 class="mb-4">Revisão por Especialistas</h1>
-      <p class="texto-slide">
-        A revisão por especialistas (peer-review, ou revisão por pares) é o processo de avaliar um artigo ou ideia de
-        projeto pelo exame crítico de terceiros que são especialistas no mesmo domínio de trabalho. Esse sistema de
-        avaliação é largamente difundido no processo de publicação de artigos em revistas e conferências, onde o
-        trabalho a ser avaliado é submetido a um editor-chefe que solicita a um grupo de especialistas membros que
-        revisem o trabalho de maneira a obter conselhos sobre se o mesmo deve ou não ser aceito para publicação, e quais
-        seriam os trabalhos/alterações ainda necessários no caso de aprovação (HARNAD, 2000).
-      </p>
-      <p class="texto-slide">Geralmente, a identidade dos revisores é ocultada dos autores, assim como também dos demais
-        revisores. Os defensores da revisão por pares alegam que esse tipo de aprovação profissional serve como uma
-        forma de garantir a qualidade dos trabalhos publicados.
-      </p>
+      <img src="images/logo-especialista.jpg" class="rounded float-right img-slides" alt="...">
 
-      <p class="texto-slide">
-        Entretanto, o sistema não é livre de críticas e problemas, como por exemplo: conflitos de interesse,
-        parcialidades dos avaliadores, atraso desnecessário no processo, e incapacidade de detectar fraudes; todos
-        mencionados como possíveis fraquezas do processo (BENOS et al., 2007).
-      </p>
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">O que é a revisão por especialistas? </h2>
+              </button>
+            </h5>
+          </div>
+
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">A revisão por especialistas (peer-review, ou revisão por pares) é o processo de
+                avaliar um artigo ou ideia de
+                projeto pelo exame crítico de terceiros que são especialistas no mesmo domínio de trabalho.
+              </p>
+            </div>
+          </div>
+        </div>
       
+
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+              aria-expanded="false" aria-controls="collapseThree">
+              <h2 class="mb-1 titulo-slide">Onde é geralmente aplicado?</h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide"> Esse sistema de
+              avaliação é largamente difundido no processo de publicação de artigos em revistas e conferências, onde o
+              trabalho a ser avaliado é submetido a um editor-chefe que solicita a um grupo de especialistas membros que
+              revisem o trabalho de maneira a obter conselhos sobre se o mesmo deve ou não ser aceito para publicação, e
+              quais
+              seriam os trabalhos/alterações ainda necessários no caso de aprovação (HARNAD, 2000).
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+              aria-expanded="false" aria-controls="collapseTwo">
+              <h2 class="mb-1 titulo-slide">Caracteristicas </h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">
+              Geralmente, a identidade dos revisores é ocultada dos autores, assim como também dos demais
+              revisores. Os defensores da revisão por pares alegam que esse tipo de aprovação profissional serve como
+              uma
+              forma de garantir a qualidade dos trabalhos publicados.
+            </p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour"
+              aria-expanded="false" aria-controls="collapseFour">
+              <h2 class="mb-1 titulo-slide">Problemas</h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseFour" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">
+              Entretanto, o sistema não é livre de críticas e problemas, como por exemplo: conflitos de interesse,
+              parcialidades dos avaliadores, atraso desnecessário no processo, e incapacidade de detectar fraudes; todos
+              mencionados como possíveis fraquezas do processo (BENOS et al., 2007).
+            </p>
+          </div>
+        </div>
+      </div>
+
     </div>
+
   </div>
+  </div>
+
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
