--- a/revisaousuarios.html
+++ b/revisaousuarios.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>5.2 Avaliação dentro de Repositórios</title>
+  <title>Objetos de Aprendizado</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -69,24 +69,80 @@
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
       <h1 class="mb-4">Revisão por Usuários</h1>
-      <p class="texto-slide">
-        A revisão pelos usuários (public review, ou revisão
-        pelo público) é utilizada por empresas online (ex.: Amazon, eBay) e outras comunidades (ex.: IMDb,
-        YouTube, RYM, etc).
-        </p>
-        <p class="texto-slide">
-        Nesses casos, os usuários normalmente se beneficiam
-        mutuamente por meio de sistemas de recomendação com base na comparação dos perfis dos usuários e da
-        correlação com suas preferências pessoais, fornecem recomendações personalizadas de itens e produtos que
-        provavelmente serão de seu interesse.
-        </p>
-        <p class="texto-slide">        
-        Nesse tipo de sistema social, as motivações e os
-        objetivos por trás da participação dos usuários variam significantemente,
-        desde o desejo e a necessidade de interação social, até o benefício da autoexpressão e reputação profissional.
-        </p>   
+
+      <img src="images/usuarios.jpg" class="rounded float-right img-slides" alt="...">
+
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">Introdução </h2>
+              </button>
+            </h5>
+          </div>
+
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">A revisão pelos usuários (public review, ou revisão
+                pelo público) é utilizada por empresas online (ex.: Amazon, eBay) e outras comunidades (ex.: IMDb,
+                YouTube, RYM, etc).
+              </p>
+            </div>
+          </div>
+        </div>
+      
+
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+              aria-expanded="false" aria-controls="collapseThree">
+              <h2 class="mb-1 titulo-slide">Características</h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">
+              Nesta revisão, os usuários normalmente se beneficiam
+              mutuamente por meio de sistemas de recomendação com base na comparação dos perfis dos usuários e da
+              correlação com suas preferências pessoais, fornecem recomendações personalizadas de itens e produtos que
+              provavelmente serão de seu interesse.
+              </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+              aria-expanded="false" aria-controls="collapseTwo">
+              <h2 class="mb-1 titulo-slide">Quais são as motivações dos usuários? </h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">        
+              Nesse tipo de sistema social, as motivações e os
+              objetivos por trás da participação dos usuários variam significantemente,
+              desde o desejo e a necessidade de interação social, até o benefício da autoexpressão e reputação profissional.
+              </p>   
+          </div>
+        </div>
+      </div>
+
     </div>
+
   </div>
+  </div>
+
+
+  
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
