--- a/sobre.html
+++ b/sobre.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>5.2 Avaliação dentro de Repositórios</title>
+  <title>Objetos de Aprendizado</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -69,16 +69,73 @@
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
       <h1 class="mb-4">Sobre</h1>
-      <p class="texto-slide">
-        Trabalho realizado pelos discentes Nayran Nery, Paulo Raimundo para discriplina informatica na Educação.</br>
-        Baseado no livro Objetos de Aprendizagem Volume 1 - Introdução e Fundamentos</br>
-        Autora: Juliana Braga</br>
-        Local e Ano: Santo André – SP, 2014</br>
-        Capitulo resumido: Cap 5 - Avaliação da Qualidade de Objetos de Aprendizagem dentro de Repositórios.
-      </p>
+      <img src="images/logo-sobre.jpg" class="rounded float-right img-slides" alt="...">
+
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">Trabalho Realizado por </h2>
+              </button>
+            </h5>
+          </div>
+
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">Nayran Nery, Paulo Raimundo
+              </p>
+
+            </div>
+          </div>
+        </div>
+      
+
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+              aria-expanded="false" aria-controls="collapseThree">
+              <h2 class="mb-1 titulo-slide">Objetivo</h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide"> Apresentação na Disciplina Informática na Educação - Universidade Estadual do Sudoeste da Bahia
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+              aria-expanded="false" aria-controls="collapseTwo">
+              <h2 class="mb-1 titulo-slide">Sobre o Site </h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">
+              Baseado no livro Objetos de Aprendizagem Volume 1 - Introdução e Fundamentos</br>
+              Autora: Juliana Braga</br>
+              Local e Ano: Santo André – SP, 2014</br>
+              Cap 5 - Avaliação da Qualidade de Objetos de Aprendizagem dentro de Repositórios
+          </p>
+          </div>
+        </div>
+      </div>
 
     </div>
+
   </div>
+  </div>
+
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
