--- a/graphite.html
+++ b/graphite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>5.2 Avaliação dentro de Repositórios</title>
+  <title>Objetos de Aprendizado</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -65,35 +65,90 @@
       </ul>
 
     </nav>
+
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
       <h1 class="mb-4">Graphite</h1>
-      <p class="texto-slide"> <a href="https://www.commonsense.org/education">Graphite</a> é um repositório relativamente novo que armazena informações sobre recursos de aprendizagem e é mantido pela Common Sense Media.         
-        No Graphite é possível encontrar websites, jogos e apps que são oficialmente pontuadas por um comitê de editores e revisores. 
-        Como o portal é construído por professores e para professores, tal comunidade também é autorizada a pontuar e comentar sobre os recursos, 
-        incluindo impressões de uso em sala de aula. As notas médias dos professores são mostradas juntamente com as pontuações oficiais. 
-        As avaliações variam entre 1 e 5 e indicam o potencial de aprendizagem dos recursos (não serve para aprendizagem, suficiente, bom, muito bom, excelente) 
-        seguindo três dimensões de aprendizagem, sendo elas:
-        </p>
+      <img src="images/graphite-logo.png" class="rounded float-right img-slides" alt="...">
 
-        <p class="texto-slide"><b>
-        1. Engajamento: o quanto os recursos seguram o interesse dos estudantes; </br>
-        2. Pedagogia: se o produto possui conteúdo central para a experiência de aprendizagem; </br>
-        3. Apoio: se o recurso fornece retorno apropriado, e se existe apoio para professores e estudantes.</br>
-      </b>
-      </p>
-      <p class="texto-slide">
-        Cada revisão de recurso ainda contém comentários sobre os pros e contras desse recurso, e como o recurso 
-        funciona.
-        <img src="images/graphite-avaliacao.png" class="img-fluid" alt="Imagem responsiva">
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">O Que é o Graphite </h2>
+              </button>
+            </h5>
+          </div>
 
-      </p>
-      
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide"> <a href="https://www.commonsense.org/education">Graphite</a> é um repositório
+                relativamente novo que armazena informações sobre recursos de aprendizagem e é mantido pela Common Sense
+                Media.
+                No Graphite é possível encontrar websites, jogos e apps que são oficialmente pontuadas por um comitê de
+                editores e revisores.
+              </p>
+            </div>
+          </div>
+        </div>
 
+
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+                aria-expanded="false" aria-controls="collapseThree">
+                <h2 class="mb-1 titulo-slide">Como é feita a avaliação no Graphite?</h2>
+              </button>
+            </h5>
+          </div>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide"> Como o portal é construído por professores e para professores, tal comunidade
+                também é autorizada a pontuar e comentar sobre os recursos,
+                incluindo impressões de uso em sala de aula. As notas médias dos professores são mostradas juntamente
+                com as pontuações oficiais.
+                As avaliações variam entre 1 e 5 e indicam o potencial de aprendizagem dos recursos (não serve para
+                aprendizagem, suficiente, bom, muito bom, excelente)                
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                aria-expanded="false" aria-controls="collapseTwo">
+                <h2 class="mb-1 titulo-slide">Quais são os criterios de avaliação do Graphite? </h2>
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">
+                <b>1. </b>Engajamento: o quanto os recursos seguram o interesse dos estudantes; </br>
+                <b>2. </b>Pedagogia: se o produto possui conteúdo central para a experiência de aprendizagem; </br>
+                <b>3. </b>Apoio: se o recurso fornece retorno apropriado, e se existe apoio para professores e
+                estudantes.</br></br>
+                Cada revisão de recurso ainda contém comentários sobre os pros e contras desse recurso, e como o recurso
+                funciona.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
 
       <img src="images/graphite.png" class="img-fluid" alt="Imagem responsiva">
+      <img src="images/graphite-avaliacao.png" class="img-fluid" alt="Imagem responsiva">
+
     </div>
   </div>
+
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
