--- a/introducao.html
+++ b/introducao.html
@@ -26,7 +26,7 @@
       <h1><a href="index.html" class="logo">Cap 5 - Avaliação da Qualidade de OA dentro de Repositórios</a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="index.html"><span class="fa fa-home mr-3"></span> O Que são Objetos de Aprendizagem (OA)</a>
+          <a href="index.html"><span class="fa fa-home mr-3"></span> Objetos de Aprendizagem (OA)</a>
         </li>
         <li>
           <a href="introducao.html"><span class="fa fa-user mr-3"></span> Introdução</a>
@@ -68,24 +68,77 @@
 
     <!-- Page Content  -->
     <div id="content" class="p-4 p-md-5 pt-5">
-      <h1 class="mb-4">Introdução</h1>
-      <p class="texto-slide">O presente capítulo descreve alguns dos principais aspectos relacionados à avaliação da
-        qualidade de objetos de aprendizagem e como
-        os atuais repositórios realizam essa avaliação, além de apresentar alguns
-        exemplos de avaliação em repositórios tradicionais.</p>
 
-      <p class="texto-slide">Avaliar a qualidade de objetos de aprendizagem (OAs) é uma tarefa
-        difícil e complexa, que normalmente gira em torno de múltiplos e diferentes aspectos que precisam ser
-        observados. Na verdade, a própria definição de qualidade não é direta. Vargo et al. (2003) declaram que, ainda
-        que
-        a avaliação da qualidade de OAs possa ser considerada um campo que
-        ainda precisa ser explorado. A qualidade é contextual
-        e irá depender do “alinhamento entre o grupo de usuários sendo servidos
-        pelo objeto, a ambientação em que o objeto foi implementado, e o propósito
-        designado para o objeto”.</p>
+      <img src="images/aprendizagem.jpg" class="rounded float-right img-slides" alt="...">
+
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                aria-controls="collapseOne">
+                <h2 class="mb-1 titulo-slide">Introdução </h2>
+              </button>
+            </h5>
+          </div>
+
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <p class="texto-slide">O presente capítulo descreve alguns dos principais aspectos relacionados à
+                avaliação da
+                qualidade de objetos de aprendizagem e como
+                os atuais repositórios realizam essa avaliação, além de apresentar alguns
+                exemplos de avaliação em repositórios tradicionais.</p>
+
+            </div>
+          </div>
+        </div>
+      
+
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+              aria-expanded="false" aria-controls="collapseThree">
+              <h2 class="mb-1 titulo-slide">É dificil avaliar um objeto de aprendizado?</h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">Avaliar a qualidade de objetos de aprendizagem (OAs) é uma tarefa
+              difícil e complexa, que normalmente gira em torno de múltiplos e diferentes aspectos que precisam ser
+              observados. Na verdade, a própria definição de qualidade não é direta.
+              A avaliação da qualidade é um campo que
+              ainda precisa ser explorado.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+              aria-expanded="false" aria-controls="collapseTwo">
+              <h2 class="mb-1 titulo-slide">Acerca da avaliação de qualidade </h2>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="card-body">
+            <p class="texto-slide">
+              A qualidade é contextual e irá depender do “alinhamento entre o grupo de usuários sendo servidos pelo objeto, a ambientação em que o
+              objeto foi implementado, e o propósito designado para o objeto”.</p>
+          </div>
+        </div>
+      </div>
 
     </div>
+
   </div>
+  </div>
+
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
